[package]
name = "sha3"
version = "0.1.0"
authors = ["Kris Kwiatkowski <kris@amongbytes.com>"]
edition = "2018"

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
keccak = "0.1"
digest = "0.1^"

[[bin]]
name ="sha3"
path = "sha3.rs"
test = false
doctest = false
bench = false
doc = false
plugin = false
proc-macro = false
harness = false
edition = "2018"
